# miniml-ocaml

./: README.md  dune-project  miniml.opam
src/: dune  lexer.mll  miniml.ml  parser.mly  syntax.ml  typecheck.ml
