opam-version: "2.0"
version: "0.1"
maintainer: "adam.vandolder@gmail.com"
authors: ["Adam Vandolder"]
homepage: "https://github.com/avandolder/miniml"
bug-reports: "https://github.com/avandolder/miniml/issues"
dev-repo: "git+https://github.com/avandolder/miniml.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
